Fix error handling in ServiceWorkerNewScriptLoader::OnComplete

In case of an error where service worker script loading fails (e.g.
when there is an attempt to load an extension service worker script
after the extension has been uninstalled), the current code
fails DCHECK if network stack calls OnComplete with error param
right from mojom::URLLoaderFactory::CreateLoaderAndStart.

This CL changes the DCHECK to apply only for non-error case.
This should fix the flakiness of the test:
ServiceWorkerTest.ServiceWorkerSuspensionOnExtensionUnload.


Bug: 877218, 868183
Test: Repeated aforementioned test x 500 locally, no DCHECK observed.
Change-Id: I1691771e466365477051f5ca1136f01f921a1ec8
Reviewed-on: https://chromium-review.googlesource.com/1187762
Commit-Queue: Istiaque Ahmed <lazyboy@chromium.org>
Reviewed-by: Makoto Shimazu <shimazu@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585730}
Former-commit-id: 6a3826e7d08c95991184aac451ecbc63b6967412